--- a/KuaiDing2/WebRoot/pages/KD/css/booking-order.css
+++ b/KuaiDing2/WebRoot/pages/KD/css/booking-order.css
@@ -41,9 +41,8 @@
 .booking-nav .li1 span { padding:0 6px;}
 .booking-nav a { font-weight:600; color:#636363; display:block; padding:0 6px;word-break:keep-all; }
 .booking-nav a:hover, .booking-nav .ahover { background:#89c935; color:#fff;}
-.booking-main { margin-top:20px; width:1300px; min-height: 600px;}
-.booking-main li { border:1px solid #dbdbdb; margin:0 12px 11px 0; width:289px;}
-.booking-main li a>img { width:289px; height:176px;}
+.booking-main { margin-top:20px; width:1200px; min-height: 600px;}
+.booking-main li { border:1px solid #dbdbdb; width:298px;}
 .booking-main h3 { font-size:18px;/* padding:20px 12px;padding:20px 12px 15px;*/padding:14px 12px;/*2015-3-24修改*/ line-height:26px;}
 .booking-main h3 a { font-size:14px; color:#fff; background:#f7ab00; line-height:16px; padding:5px 10px;}
 .booking-main li>p { padding:9px 12px; background:#f5f5f5;/* margin-top:25px;margin-top:15px;*//*2015-3-24修改*/ line-height:21px;}
@@ -52,8 +51,12 @@
 .booking-bottom { margin-top:20px;}
 .booking-main .star-img { padding:0 10px; display:inline-block; vertical-align:top; width:92px; height:16px;}
 .booking-main .yishou { font-size:14px; color:#666; padding-left:20px; line-height:16px;}
-
-
+.rstpic { width:70px; height:70px;padding:25px;}
+.main_left h5{padding:0 0 20px 30px;}
+.main_right { float:right; margin:-150px 40px 0 0;}
+.main_right img{ float:left;}
+.main_right h5{margin:5px 0 8px 0;}
+.main_right p img{margin:3px;}
 
 .table { font-size:14px; color:#636363;}
 .nav-bar { margin:15px 0; line-height:26px; font-weight:600;}
