wuting 2016-03-29 9:50 合并表为 “kd_rstinfo” + 修改图片调取方式

--- a/KuaiDing2/WebRoot/pages/Restaurant/css/home.css
+++ b/KuaiDing2/WebRoot/pages/Restaurant/css/home.css
@@ -69,6 +69,7 @@ h7{margin-left:10px}
 .evaluate-rst li{float:left; margin-left:20px;}
 .p0 span{margin-left:20px;}
 .pingjia1{margin-top:80px; padding-left:100px;}
+.pingjia1 img{margin-top:5px;}
 .pingjia2,.pingjia3{margin-top:80px;}
 .pingjia2 p{margin-top:7px;}
 .pingjia3 p{margin-top:2px;}
