--- a/KuaiDing2/WebRoot/pages/Restaurant/css/home.css
+++ b/KuaiDing2/WebRoot/pages/Restaurant/css/home.css
@@ -67,6 +67,7 @@ h7{margin-left:10px}
 .evaluate-top .bg4 {background:#32b3ed; height:50px; padding-top:15px;}
 .evaluate-rst {background:#fff; margin:10px; padding:10px;}
 .evaluate-rst li{float:left; margin-left:20px;}
+.p0 h3{margin-left:20px;}
 .p0 span{margin-left:20px;}
 .pingjia1{margin-top:80px; padding-left:100px;}
 .pingjia1 img{margin-top:5px;}
@@ -83,6 +84,7 @@ h7{margin-left:10px}
 .evaluate-lists li{float:left; width:485px; height:100px; padding:50px; margin:0px 10px 10px 0px; background:#fff;}
 .evaluate-lists{margin:20px 0px 0px 10px;}
 .evaluate-text{font-size:16px; margin:30px;}
+.pjrq{ float:right;}
 
 /* 留言（rst-comments） */
 .rst-comments{background:#ffb061; padding-bottom:10px;}
