--- a/KuaiDing2/WebRoot/pages/Order/css/gwc.css
+++ b/KuaiDing2/WebRoot/pages/Order/css/gwc.css
@@ -30,4 +30,4 @@
 .input1, .span1, .span2{ font-size:18px; font-family:"宋体"; }
 .order-right .input1{ width:200px; height:30px; border:1px solid #ccc; margin-left:10px;}
 .btn2{ background-color:#a1c450; color:#fff; font-size:18px; font-family:"宋体"; padding:10px 20px; margin:5px 0px 5px 350px;}
-
+.radio{margin-left:15px;}
