--- a/KuaiDing2/WebRoot/pages/Order/css/gwc.css
+++ b/KuaiDing2/WebRoot/pages/Order/css/gwc.css
@@ -27,7 +27,7 @@
 .order-right {float:right; margin:20px 50px 20px 0px; padding:20px; width:540px; border:1px solid #a1c450;}
 .order-right li { margin:30px 0 0 30px;}
 .order-right li h5{ margin:10px;}
-.input1, .span1, .span2{ font-size:18px; font-family:"宋体"; }
-.order-right .input1{ width:200px; height:30px; border:1px solid #ccc; margin-left:10px;}
-.btn2{ background-color:#a1c450; color:#fff; font-size:18px; font-family:"宋体"; padding:10px 20px; margin:5px 0px 5px 350px;}
-.radio{margin-left:15px;}
+.input1, .span1, .span0{ font-size:18px; font-family:"宋体"; }
+.order-right .input1{ width:200px; height:30px; border:1px solid #ccc; margin-left:10px; text-align:center;}
+.btn2{ background-color:#a1c450; color:#fff; font-size:18px; font-family:"宋体"; padding:10px 10px; margin:5px 0px 5px 350px;}
+.radio{margin-left:30px;}
