--- a/KuaiDing2/WebRoot/pages/Restaurant/css/dz.css
+++ b/KuaiDing2/WebRoot/pages/Restaurant/css/dz.css
@@ -18,17 +18,18 @@
 .rst-right .bg4 { background:#32b3ed;}
 .rst-right .bg5 { background:#f93;}
 .rst-right li:hover, .rst-right .li1 { background-color:#89c935;}
-.rst-right h4 { margin-top:15px;}
+.rst-right h4 { margin-top:15px; text-align:center;}
 
 /* 菜单（rst-dz） */
 .dz-left{margin:20px 20px 20px 80px;}
 .dz-right{width:700px; height:420px; margin-left:280px; background-image:url(../images/bg.png); padding:30px 80px;}
-.btn1{ background-color:#a1c450; color:#fff; font-size:18px; font-family:"宋体"; padding:10px 15px; float:right; margin-right:30px; margin-top:-60px;}
-.input3, .span1,.lable1,.span2{ font-size:18px; font-family:"宋体"; }
-.input3{ width:200px; height:30px; border:1px solid #ccc; margin-left:10px;}
+.btn1{ background-color:#a1c450; color:#fff; font-size:18px; font-family:"宋体"; padding:10px 10px; float:right; margin-right:30px; margin-top:-50px;}
+.input3, .span1,.lable1,.span2{ font-size:18px; font-family:"宋体";}
+
+.input3{text-align:center; width:200px; height:30px; border:1px solid #ccc; float:right; margin:-25px 310px 0 0;}
 .radio{margin-left:15px;}
 .dz-right li h5{ margin:15px;}
-.dz-right li { margin:30px;}
+.dz-right li { margin:35px;}
 
 .menu {
 	width:150px; height:470px;font-family:"宋体";
