--- a/KuaiDing2/WebRoot/pages/Restaurant/css/home.css
+++ b/KuaiDing2/WebRoot/pages/Restaurant/css/home.css
@@ -30,9 +30,33 @@
 .list-title{background:#eee;}
 h1{margin:30px;}
 h2{ font-size:18px; margin-left:120px; float:left;}
-.menu-meals h3{ float:left; font-size:20px; margin-left:30px; margin-top:5px;}
-.button1{float:right; font-size:18px;background: #ccc; margin:10px; padding:3px 15px;}
-.button2{width:70px; margin-left:200px; margin-top:5px; padding:5px 25px 5px 30px; background:#CCC url(../images/qian.png) no-repeat 15px 5px;}
+h3{ float:left; font-size:20px; margin-left:30px; margin-top:5px;}
+
+.button1{
+	float:right; 
+	font-size:18px;background: #ccc; 
+	margin:10px; 
+	padding:3px 15px; 
+	height: 30px;//设置行高是为了解决Safari和Chrome下的高度问题
+	line-height: 19px;//让文字居中显示
+	margin: 0;
+	overflow:visible !ie;//只有设置这个属性IE下padding才能生效
+	width: auto;//现代浏览器下识别
+	*width: 1;//IE7和IE6识别，设置值为1,我也不知道有何作用，但有些人此处设置值为0
+}
+
+.button2{
+	width:70px; 
+	margin-top:5px; 
+	padding:5px 25px 5px 30px; 
+	background:#CCC url(../images/qian.png) no-repeat 15px 5px; 
+	height: 30px;
+	line-height: 10px;
+	margin: 0;
+	overflow:visible !ie;
+	*width: 1;
+}
+
 .list-meals h2{margin-top:5px; width:220px;}
 .list-meals span{margin-right:120px; float:right;}
 .list-meals span h5{font-size:12px; margin:auto;}
@@ -48,26 +72,44 @@ h2{ font-size:18px; margin-left:120px; float:left;}
 h5{font-size:16px; margin:15px 0px 10px 120px;}
 
 /* 美食墙（rst-pics） */
-.rst-pics{background:#b7d27c; padding-bottom:3px;}
+.rst-pics{background:#b7d27c; padding-bottom:10px;}
 .pics-top{cursor:pointer; margin-top:30px;}
 .pics-top .bg3 {background:#a3c450; height:50px; padding-top:15px;}
 .pics-info .title{background:#fff; margin:10px;}
 .pics-info .title li{float:left; margin-left:20px;}
-.button3{font-size:18px; float:left; background:#fff; padding:5px 15px; margin:15px 10px;}
-.btn4{width:70px; margin-top:5px; float:right; padding:5px 25px 5px 30px; background:#CCC url(../images/qian.png) no-repeat 15px 6px;}
-.pics-lists li{float:left; padding:26px; margin:10px 20px 10px 0px; background:#fff;}
-.pics-lists{margin-left:10px;}
+
+.button3{
+	font-size:18px; 
+	margin-left:10px; 
+	background:#fff; 
+	padding:5px 15px; 
+	margin:15px 10px; 
+	overflow:visible !ie;
+}
+
+.btn4{
+	width:70px; 
+	margin-top:5px; 
+	float:right; 
+	padding:5px 25px 5px 30px; 
+	background:#CCC url(../images/qian.png) no-repeat 15px 6px; 
+	overflow:visible !ie;
+}
+
+.pics-lists li{width:236px; float:left; padding:25px; margin:10px 10px 0px 0px; background:#fff;}
+.pics-lists{margin-left:12px;}
 .pics-lists span{margin-left:10px;}
 h6{font-size:18px; margin:15px;}
 h7{margin-left:10px}
 
 /* 评价（rst-evaluate） */
-.rst-evaluate{background:#71cbf3; padding-bottom:3px;}
+.rst-evaluate{background:#71cbf3; padding-bottom:10px;}
 .evaluate-top{cursor:pointer; margin-top:30px;}
 .evaluate-top .bg4 {background:#32b3ed; height:50px; padding-top:15px;}
 .evaluate-rst {background:#fff; margin:10px; padding:10px;}
 .evaluate-rst li{float:left; margin-left:20px;}
 .p0 h3{margin-left:20px;}
+.p0 h7{margin-left:20px; display:inline;}
 .p0 span{margin-left:20px;}
 .pingjia1{margin-top:80px; padding-left:100px;}
 .pingjia1 img{margin-top:5px;}
@@ -81,7 +123,7 @@ h7{margin-left:10px}
 .rectangle1{width:10px; height:10px; background:#F60;}
 .evaluate-info .title{background:#fff; margin:10px;}
 .evaluate-info .title li{margin-left:20px;}
-.evaluate-lists li{float:left; width:485px; height:100px; padding:50px; margin:0px 10px 10px 0px; background:#fff;}
+.evaluate-lists li{float:left; width:485px; height:100px; padding:50px; margin:10px 10px 0px 0px; background:#fff;}
 .evaluate-lists{margin:20px 0px 0px 10px;}
 .evaluate-text{font-size:16px; margin:30px;}
 .pjrq{ float:right;}
